# matrix-notify

./: .config.json  Cargo.toml  README.md
src/: lib.rs  main.rs
