[package]
name = "matrix-notify"
version = "0.1.0"
authors = ["VanillaBrooks <brooks@karlik.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
tokio = { version="1.11.0", features=["rt", "macros"]}
dotenv = "0.15.0"
url = "2.2.2"
argh = "0.1.4"
mime_guess = "2.0.3"
serde_json = "1.0.64"
serde = {version="1.0.126", features=["derive"]}
ruma = { version = "0.4.0", features = ["client-api", "client", "client-hyper-native-tls", "client-ext-client-api"] }
hyper = "0.14.11"
hyper-tls = "0.5.0"
