[package]
name = "matrix-notify"
version = "0.1.0"
authors = ["VanillaBrooks <brooks@karlik.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "^1", optional = true }
tokio = { version="^1", features=["rt", "macros"], optional = true}
dotenv = { version = "0.15.0", optional = true }
url = { version = "2.2.2", optional = true }
argh = { version = "0.1.4", optional = true }
mime_guess = { version = "2.0.3", optional = true }
serde_json = { version = "^1", optional = true }
serde = {version="^1", features=["derive"], optional=true}
hyper = { version = "0.14.11", optional = true }
hyper-tls = { version = "0.5.0", optional = true }

[dependencies.ruma-common]
version = "0.9.3"
optional = true

[dependencies.ruma]
# we need these git dependencies until ruma hits VERSION > 0.6.4
# since the function `fn send_matrix_request` boxed future is not 
# marked `Send`
git = "https://github.com/ruma/ruma"
rev = "c745d3baf720b38a254e640a526717864e87a065"
features = [ "rand", "client-api", "client", "client-hyper-native-tls", "client-ext-client-api", "api" ]
optional = true

[features]
default = ["cli"]
cli = [
	"tokio",
	"dotenv",
	"url",
	"argh",
	"mime_guess",
	"serde_json",
	"serde",
	"ruma",
	"hyper",
	"hyper-tls",
	"thiserror"
]
userid = ["ruma-common"]
"static-api" = []

[[bin]]
name = "matrix-notify"
required-features = ["cli", "static-api"]
